# lunafit

./: .gitignore  PROJECT_GUIDELINES.md  README.md
.github/workflows/: deploy-identity-lambda.yml  release.yml
apps/backend/: Cargo.toml
apps/backend/lambdas/identity/http/register-user/: Cargo.toml  README.md
apps/backend/lambdas/identity/http/register-user/src/: http_handler.rs
infra/: cognito.tf  lambda-identity.tf  provider.tf  register-user.tf  terraform.tfvars  variables.tf  versions.tf
scripts/: build-lambda.sh  build.sh  deploy.sh  test.sh
